@@ -1,1 +1,2 @@
+java --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;.\src" src.MainMenu
 java --module-path .\Libs\javafx\lib --add-modules=javafx.controls,javafx.fxml --class-path "..;.;.\src" src.Main
